@@ -5194,7 +5194,7 @@ void RayTriangleTrans3fv(CRay *I,
   p->tr[0] = t1;
   p->tr[1] = t2;
   p->tr[2] = t3;
-
+  p->trans = (t1+t2+t3)/3.0F;
 }
 
 /*========================================================================*/
